<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/bg_grey"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SettingPackage.BuyingCoinActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="10dp"
        app:cardCornerRadius="20dp"
        app:contentPadding="10dp" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/date_buying_coin"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/dateReceipt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:text="29/11/2023"
                    android:textSize="20sp" />
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/gray" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/price_buying_coin"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/pricePerCoin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:text="100 vnd / 1 coin"
                    android:textSize="20sp" />
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/gray" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp">

                <TextView
                    android:layout_centerVertical="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/number_of_coins_buying_coin"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/numberOfCoin"
                    android:layout_width="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:hint="@string/enter_number_of_coins_buying_coin"
                    android:inputType="numberPassword"
                    android:textSize="20sp" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/price_2_buying_coin"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:text="0"
                    android:textSize="20sp" />
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/gray" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/discount_buying_coin"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/discount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:text="0"
                    android:textSize="20sp" />
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/gray" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="40dp"
                android:background="@color/black" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/total_buying_coin"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/total"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:text="0"
                    android:textSize="20sp" />
            </RelativeLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_gravity="center_horizontal"
                android:text="@string/note_discount_buying_coin"
                android:textStyle="bold|italic"
                android:layout_height="wrap_content" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/warning"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginHorizontal="20dp"
        android:text="ZaloPay cho phép thanh toán với giá trị tối thiểu 1000đ. Bạn có thể chọn thêm sản phẩm khác để đạt giá trị tối thiểu."
        android:visibility="invisible"/>


    <com.google.android.material.button.MaterialButton
        app:icon="@drawable/zalopay_icon"
        app:iconSize="24dp"
        app:iconTint="@null"
        android:layout_marginTop="15dp"
        android:id="@+id/zalopay_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/alegreysan"
        android:layout_gravity="center_horizontal"
        android:backgroundTint="@color/main_blue_color"
        android:text="@string/zalopay_button" />

</LinearLayout>