<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_grey"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".SettingPackage.BuyingSubActivity">


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="10dp"
        app:cardCornerRadius="20dp"
        app:contentPadding="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/date_buying_coin"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/dateReceipt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:text="29/11/2023"
                    android:textSize="20sp" />
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/gray" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/price_per_day_buying_sub"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/pricePerDay"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:text="40,000"
                    android:textSize="20sp" />
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/gray" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/vip_duration_buying_sub"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/VIPDuration"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:text="1"
                    android:textSize="20sp" />
            </RelativeLayout>

            <View
                android:id="@+id/line"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/gray" />

            <RelativeLayout
                android:id="@+id/discountLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/money_saved_buying_sub"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/save"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:text="20,000"
                    android:textSize="20sp" />
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/gray" />

            <RelativeLayout
                android:id="@+id/coinGet"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/coin"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/totalCoin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:text="20,000"
                    android:textSize="20sp" />
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/gray" />

            <RelativeLayout
                android:id="@+id/expired"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/expired_date_buying_sub"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/expiredDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:text="06/04/2024"
                    android:textSize="20sp" />
            </RelativeLayout>



            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="40dp"
                android:background="@color/black" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/total"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/totalPrice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:text="40,000"
                    android:textSize="20sp" />
            </RelativeLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/warning"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginHorizontal="20dp"
        android:text="ZaloPay cho phép thanh toán với giá trị tối thiểu 1000đ. Bạn có thể chọn thêm sản phẩm khác để đạt giá trị tối thiểu."
        android:visibility="invisible"/>


    <com.google.android.material.button.MaterialButton
        app:icon="@drawable/zalopay_icon"
        app:iconSize="24dp"
        app:iconTint="@null"
        android:layout_marginTop="15dp"
        android:id="@+id/zalopay_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/alegreysan"
        android:layout_gravity="center_horizontal"
        android:backgroundTint="@color/main_blue_color"
        android:text="@string/zalopay_button" />


</LinearLayout>