<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageFav"
        android:layout_width="37dp"
        android:layout_height="24dp"
        android:layout_marginTop="244dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imgView"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toTopOf="@+id/txtTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/txtTitle"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="20dp"
        android:gravity="center"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgView" />


    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="10dp"
        android:background="@color/cardview_dark_background"
        android:backgroundTint="@color/cardview_dark_background"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/scrollView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTitle">

        <LinearLayout
            android:layout_width="114dp"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txt1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="5dp"
                android:text="@string/author"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/txt2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="@string/status"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/txt3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="@string/chapters"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/txt4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:autoSizeTextType="uniform"
                android:text="@string/likes"
                android:textColor="@color/white"
                android:textSize="16sp" />
            <TextView
                android:id="@+id/txt5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginBottom="10dp"
                android:text="@string/genres"
                android:textColor="@color/white"
                android:textSize="16sp"
                tools:ignore="UnusedAttribute"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout6"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/cardview_dark_background"
            android:backgroundTint="@color/cardview_dark_background"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtAuth"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="20dp"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/txtProgress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:text="In progress"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/txtChap"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/txtLike"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:textColor="@color/white"
                android:textSize="16sp" />
            <TextView
                android:id="@+id/txtGenres"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="10dp"
                android:textColor="@color/white"
                android:textSize="16sp" />
        </LinearLayout>

    </LinearLayout>

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_gravity="bottom"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout4">

        <TextView
            android:id="@+id/txtDes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:textSize="20sp" />

    </ScrollView>

    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/btnChap"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="49dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:layout_weight="1"
            android:backgroundTint="#29B6F6"
            android:text="@string/chapter"
            android:textColor="#FFFFFF"
            app:cornerRadius="10dp" />

        <Button
            android:id="@+id/btnRead"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="49dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:layout_weight="1"
            android:backgroundTint="#FF9800"
            android:text="@string/read"
            android:textColor="#FFFFFF"
            app:cornerRadius="10dp" />

        <Button
            android:id="@+id/btnFav"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="49dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:layout_weight="1"
            android:backgroundTint="#EC407A"
            android:text="@string/favorite"
            android:textColor="#FFFFFF"
            app:cornerRadius="10dp"
            tools:ignore="TextContrastCheck" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>